--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-polyglot-middleware",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "express middleware for node-polyglot (polyglot.js from airbnb)",
   "homepage": "",
   "author": {
@@ -20,21 +20,22 @@
     "polyglot"
   ],
   "devDependencies": {
-    "eslint-config-xo-space": "^0.7.0",
+    "babel-core": "^5.5.0",
     "babel-eslint": "^4.1.6",
+    "del": "^2.0.2",
+    "eslint-config-xo-space": "^0.7.0",
     "eslint-plugin-babel": "^3.0.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-babel": "^5.1.0",
-    "del": "^2.0.2",
-    "babel-core": "^5.5.0",
-    "isparta": "^3.0.3"
+    "gulp-plumber": "^1.0.0",
+    "isparta": "^3.0.3",
+    "node-polyglot": "^1.0.0"
   },
   "eslintConfig": {
     "extends": "xo-space/esnext",
@@ -42,7 +43,10 @@
       "mocha": true
     }
   },
-  "repository": "idw111/node-polyglot-middleware",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/idw111/node-polyglot-middleware.git"
+  },
   "scripts": {
     "prepublish": "gulp prepublish",
     "test": "gulp"
